css/styles.css
* {
  padding: 0%;
  margin: 0%;
}

body   {
  width: 80vw;
  height:46.9vw;
  padding: 0%;
  margin: 2%;
  background-image: linear-gradient(aqua, purple);
  display: flex;
  justify-content: space-around;
  color: rgb(255, 255, 255);
}

.jumbotron {
  padding: 200px;
  margin: 2%;
  padding-bottom: 7%;
}

#questions {
  padding-top: 29%;
  margin-right: 20%;
  text-align: center;
}

.output {
  padding-top: 20%;
  display: none;
}

.container {
  display: grid;
  margin: 0%;
  /* padding: 200px; */
}

.container > div {
  text-align: center;
  font-size: 20px;
}

.rubyAnswer {
  display: none;
}

.cSharpAnswer {
  display: none;
}

.pythonAnswer {
  display: none;
}

.rustAnswer {
  display: none;
}

.swiftAnswer {
  display: none;
}

.javascriptAnswer {
  display: none;
}

.goAnswer {
  display: none;
}

.Unreal {
  display: none;
}

.btn {
  color: rgb(0, 0, 0);
  font-style: bold;
  font-size: 30px;
}

#nameOfPerson {
  margin: px
}

